--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16985,3 +16985,10 @@ box-shadow: 0px 1px 5px rgba(255, 255, 255, 0.1);
         max-height: 250px;
     }
 }
+
+/* Make logo images transparent by blending out the black background */
+.wpo-site-header .logo img,
+.wpo-site-header .navbar-brand.logo img,
+.wpo-site-header .navbar-header .logo img {
+    mix-blend-mode: screen !important;
+}
